fixed mobile menu nav not jumping to hash id hide the border of menu nav active

--- a/style.css
+++ b/style.css
@@ -2843,6 +2843,7 @@ img[referrerpolicy="no-referrer-when-downgrade"] {
     display: flex;
     left: 10%;
     transition: all 0.4s ease;
+    opacity: 0;
   }
   .mobiler-footer,
   .mobiler-footer > a:first-child {
